--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ name: AdminUI
 main: AdminUI\Main
 api: 3.0.0-ALPHA10
 version: 1.0
-author: ArmTheDev
+author: Amirchick73
 commands:
  admin:
     default: op
